# cardano

./: .gitignore  .prettierignore  package.json  pnpm-lock.yaml  worker-configuration.d.ts  wrangler.toml
.github/workflows/: release.yml
crates/cardano-edge-sync/: Cargo.toml
crates/cardano-edge-sync/src/: config.rs  cursor.rs  lib.rs  main.rs
src/: cardano.ts  env.ts  index.ts  validations.ts
