[package]
name = "cardano-edge-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
gasket = { version = "0.8.0", features = ["derive"] }
itertools = "0.13.0"
miette = { version = "7.2.0", features = ["fancy"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utxorpc = "0.5.0"
